banner区域的数据处理与展示

--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "react": "^15.6.1",
     "react-dev-utils": "^4.0.1",
     "react-dom": "^15.6.1",
+    "react-swipe": "^5.0.8",
     "style-loader": "0.18.2",
     "sw-precache-webpack-plugin": "0.11.4",
+    "swipe-js-iso": "^2.0.4",
     "url-loader": "0.5.9",
     "webpack": "3.5.1",
     "webpack-dev-server": "2.7.1",
