--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "^15.6.1",
     "react-dev-utils": "^4.0.1",
     "react-dom": "^15.6.1",
+    "react-router-dom": "^4.2.2",
     "react-swipe": "^5.0.8",
     "style-loader": "0.18.2",
     "sw-precache-webpack-plugin": "0.11.4",
