--- a/package.json
+++ b/package.json
@@ -32,10 +32,13 @@
     "promise": "8.0.1",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
+    "react-addons-css-transition-group": "^15.6.0",
     "react-dev-utils": "^4.0.1",
     "react-dom": "^15.6.1",
+    "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-swipe": "^5.0.8",
+    "redux": "^3.7.2",
     "style-loader": "0.18.2",
     "sw-precache-webpack-plugin": "0.11.4",
     "swipe-js-iso": "^2.0.4",
