--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "babel-loader": "7.1.1",
     "babel-preset-react-app": "^3.0.2",
     "babel-runtime": "6.26.0",
+    "better-scroll": "^1.3.1",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "css-loader": "0.28.4",
